    * Fix bug - -d with --filelist with stdin as input created erronous "need
      --no-archive-mode".
    * Fix bug (win32 only) - mkdir error really fixed this time.
    * Fix bug - --ne-nesting would cause --delete and --delete-keys to delete
      the wrong path (and thus fail)

Version 1.07 - May 7 2008
    * Fix bug (Win32) - trying to work cross drive to a drive that is not C:
      would fail the mkdir with an error (Access denied or similar)
    * Move the project build to Visual C 9. Removed Visual Studio 6 project
      files. Project now creates an MSI file as part of the build process.
    * Fix bug - --trim=0 combined with --name-encrypt combined with --delete:
      Would not detect deleted files on absolute names
    * Update the man page about command line options accidentally ommited.
    * Due to more investigation on the GPL's relationship to non-GPL
      libraries, remove rant at the begining of the license.
    * Fix bug - --noatime=1 would not correctly detect when running as root
    * Solve a couple of compilation warnings on gcc 4.3
    * Clean out detection of hash_map class - we use std::map exclusively.
    * Clean out generated automake/conf files. bootstrap can generate them

Version 1.06
2007-11-28
    * Fix regression - setting the filemap meta data would sometimes segfault
    * Clarified in program help that -c also works with --filelist. Closes 1759890
    * Make the library tests not depend on specific file extension. Closes 1717324

2007-11-21
    * Fix segmentation fault when given the wrong file as private/public key
    * Fix regression - encrypting stdin stopped working in 1.05

Version 1.05
2007-11-16
    * Add option --modify-window that mimics the rsync option of the same
      name.

2007-11-14
    * Add option governing use of O_NOATIME (where applicable).
    * By default, auto detect whether O_NOATIME will fail, and only use where
      it will succeed.

Version 1.04
2007-07-20